--- a/main.html
+++ b/main.html
@@ -12,10 +12,12 @@
 </script>
 
 	<table>
-		<thead>
-		<tr> roll number </tr>
-		<tr> name </tr>
-		</thead>
+		<tr> 
+			<th> roll number </th> 
+			<th> name </th> 
+		</tr>
+		
+			
 		</table>
 </body>
 
