--- a/main.html
+++ b/main.html
@@ -12,11 +12,23 @@
 </script>
 
 	<table>
-		<tr> 
-			<th> roll number </th> 
-			<th> name </th> 
-		</tr>
-		
+		<thead>
+			<tr> roll number </tr>
+			<tr> name </tr>
+	
+		</thead>
+
+		<tbody>
+			<tr>
+			<td>1</td>
+			<td>raju</td>
+			</tr>
+
+			<tr>
+			<td>2</td>
+			<td>AJU</td>
+			</tr>
+		</tbody>
 			
 		</table>
 </body>
