--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 
 	<table>
 		<thead>
-			<tr> roll number </tr>
-			<tr> name </tr>
+			<th> roll number </th>
+			<th> name </th>
 	
 		</thead>
 
