--- a/main.html
+++ b/main.html
@@ -8,13 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
 	<table>
 		<thead>
-			<th> roll number </th>
-			<th> name </th>
+			<th>roll number</th>
+			<th>name</th>
 	</thead>
 
 		<tbody>
@@ -25,11 +22,15 @@
 
 			<tr>
 				<td>2</td>
-				<td>AJU</td>
+				<td>aju</td>
 			</tr>
 		</tbody>
 			
-		</table>
+	</table>
+    <script type="text/javascript" src="./script.js">
+</script>
+
+	
 </body>
 
 </html>
